refactor(login): 重构登录控制器密码编码和视图处理
- 替换 LdapShaPasswordEncoder 为 PasswordUtil 进行密码编码
- 移除未使用的 HttpUtil, RequestCache, SavedRequest 等导入
- 抽取公共方法 initModelAndView 处理视图初始化逻辑
- 抽取公共方法 getClientId 获取客户端ID
- 修复重置密码页面标题为"重置密码"
- 更新页面跳转链接从 login 到 index.html
- 配置文件中添加短信服务提供商配置
- 将 Redis 依赖替换为 Redisson